--- a/src/feed.css
+++ b/src/feed.css
@@ -1,10 +1,43 @@
+
 .container-feed { 
 
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
+
   }
+
+.logo{
+    width: auto;
+    height: 50px;
+  }
+
+.sair-div{
+  height: 44px;
+  width: 44px;
+  cursor: pointer;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+}
+
+.icon{
+  width: 33px;
+  height: auto;
+}
+
+.nav-bar{
+  height: 60px;
+  background-color: white;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  box-sizing: border-box;
+  justify-content: space-between;
+  padding: 20px;
+}
 
 .btn-feed {
 
@@ -17,9 +50,12 @@
 }
 .btn-feed:focus {
     outline: none;
-    border-bottom: 2px solid #FF007A;
+    border-bottom: 2px solid #69a79a;
   }
 
+.post{
+
+}
 .card {          
     padding: 25px;
     display: flex;
