--- a/src/cadastro.css
+++ b/src/cadastro.css
@@ -6,17 +6,17 @@
     justify-content: center;
   }
   
-  .mia {
+  .cadastro {
+    margin-top: 40%;
+    margin-bottom: 5%;
+    width: 100%;
     display: flex;
-    align-self: flex-start;
+    align-items: center;
+    flex-direction: column;
    
   }
-  
-  .cadastro {
-    justify-content: space-around;
-    margin-top:10%;
-    margin-bottom: 5%;
-    width: 50%;
-   
+
+  .text{
+    width:240px;
   }
   
