--- a/src/cadastro.css
+++ b/src/cadastro.css
@@ -1,22 +1,36 @@
 
-  .container-cadastro { 
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-  }
-  
-  .cadastro {
-    margin-top: 40%;
-    margin-bottom: 5%;
-    width: 100%;
-    display: flex;
-    align-items: center;
-    flex-direction: column;
-   
-  }
+.container-cadastro { 
 
-  .text{
-    width:240px;
-  }
+  align-items: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+
+}
+  
+.logo-cadastro {
+
+  align-items: center;
+  display: flex;
+  flex-direction: column;
+  margin-top: 60px;
+
+}
+  
+.cadastro {
+
+  align-items: center;
+  display: flex;
+  flex-direction: column;
+  margin-top: 40px;
+  margin-bottom: 5%;
+  width: 100%;
+   
+}
+
+.text {
+
+width:240px;
+
+}
   
