--- a/src/feed.css
+++ b/src/feed.css
@@ -1,107 +1,169 @@
 
 .container-feed { 
 
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
+  align-items: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 
-  }
+}
 
-.logo{
-    width: auto;
-    height: 50px;
-  }
+.logo {
 
-.sair-div{
-  height: 44px;
-  width: 44px;
+  height: 50px;
+  width: auto;
+
+}
+
+.sair-div {
+
+  align-items: center;
   cursor: pointer;
   display: flex;
+  height: 44px;
   justify-content: center;
-  align-items: center;
+  width: 44px;
 
 }
 
-.icon{
-  width: 33px;
+.icon { 
+
   height: auto;
+  width: 33px;
+
 }
 
-.nav-bar{
-  height: 60px;
-  background-color: white;
-  width: 100%;
-  display: flex;
+.nav-bar {
+
   align-items: center;
+  background-color: white;
   box-sizing: border-box;
+  display: flex;
+  height: 60px;
   justify-content: space-between;
   padding: 20px;
+  width: 100%;
+
 }
 
-.img-sair{
-  width: 60px;
-  height: 60px;
-  display: flex;
+.img-sair {
+
   align-items: center;
+  display: flex;
+  height: 60px;
   justify-content: center;
+  width: 60px;
+
 }
 
-.sair-svg{
-  width: 75%;
+.sair-svg {
+
   height: auto;
+  width: 75%;
+
 }
+
 .btn-feed {
 
   background-color: #dcdcdc;
   border-radius: 10px;
-  font-weight: bold;
   border: none;
+  font-weight: bold;
   margin: 0 10px;
   padding: 10px;
   
 }
+
 .btn-feed:focus {
-    outline: none;
-    border-bottom: 2px solid #69a79a;
-  }
 
-.post-container{
-    height: 17vh;
-    width: 100%;
-    padding: 12px;
-    background-color: #69a79a;
-    display: flex;
-    flex-direction: column;
-}
-.post {
-  margin-bottom: 10px;
-  display: flex;
-  height: 70;
-  align-items: center;
-  height: 5vh;
-  margin: 10px;
-  border-radius: 10px;
-  border: none;
-  padding: 10px;
+  border-bottom: 2px solid #69a79a;
+  outline: none;
+  
 }
 
-.card {          
-  background-color: white;
-  padding: 22px;
+.post-container {
+
+  background-color: #69a79a;
   display: flex;
   flex-direction: column;
-  box-shadow: 0 5px 6px 0 rgba(0,0,0,.15);
-  align-items: all .2s ease-in-out;
-  display: flex;
+  height: 17vh;
+  padding: 12px;
+  width: 100%;
+
+}
+
+.post {
+
   align-items: center;
+  border: none;
+  border-radius: 10px;
+  display: flex;
+  height: 70px;
+  height: 5vh;
   margin: 10px;
-  width: inherit;
+  margin-bottom: 10px;
+  padding: 10px;
+  
+}
+
+.card {   
+
+  align-items: center;
+  align-items: all .2s ease-in-out;
+  background-color: white;
   border-radius: 10px;
   box-sizing: border-box;
+  box-shadow: 0 5px 6px 0 rgba(0,0,0,.15);
+  display: flex;
+  flex-direction: column;
+  margin: 10px;
+  padding: 22px;
+  width: inherit;
+
 }
   
 .userpost {
+
   width: 100vw;
+
 }
-  
+
+@media screen and (min-width: 1024px){
+
+.post {
+
+   width:90% ;
+    
+}
+
+.post-container {
+
+  box-sizing: border-box;
+  display: flex;
+  flex-direction: row;
+
+}
+
+.btn-feed {
+
+  height: 50px;
+  margin: 10px;
+  width: 10%;
+
+}
+
+.artigo {
+
+  box-sizing: border-box;
+  display: flex;
+  width: 100%;
+
+}
+
+.artigo:nth-last-child(2) {
+
+  justify-content: flex-end;
+
+}
+
+}
