--- a/src/feed.css
+++ b/src/feed.css
@@ -12,6 +12,7 @@
 
   height: 50px;
   width: auto;
+  margin-top: auto;
 
 }
 
@@ -23,6 +24,7 @@
   height: 44px;
   justify-content: center;
   width: 44px;
+  margin-top: auto;
 
 }
 
@@ -39,9 +41,9 @@
   background-color: white;
   box-sizing: border-box;
   display: flex;
-  height: 60px;
+  height: 100px;
   justify-content: space-between;
-  padding: 20px;
+  padding: 25px;
   width: 100%;
 
 }
@@ -51,16 +53,18 @@
   align-items: center;
   display: flex;
   height: 60px;
-  justify-content: center;
+  /* justify-content: center; */
   width: 60px;
 
 }
 
 .sair-svg {
 
-  height: auto;
-  width: 55%;
-  align-content: left;
+  align-items: center;
+  display: flex;
+  height: 60px;
+  justify-content: center;
+  width: 40px;
 
 }
 
@@ -109,7 +113,7 @@
 
 .img-background {
 
-  background: #dcdcdc url("fotos/logo-half-2.png") scroll no-repeat;
+  background: #dcdcdc url("fotos/logo-half-2.png") no-repeat;
   background-size: 90%;
   background-position: right;
   background-position-y: 550px;
