--- a/src/login.css
+++ b/src/login.css
@@ -7,10 +7,6 @@ body {
 
 }
 
-p {
-  font-size: 150%;
-}
-
 .container-login {
 
   align-items: center;
@@ -25,7 +21,7 @@ img {
   height: 25%;
   max-width: 200px;
   width:80%;
-  margin-top: 90px;
+  /* margin-top: 90px; */
 }
 
 .titulo {
