--- a/src/cadastro.css
+++ b/src/cadastro.css
@@ -1,33 +1,25 @@
-
 .container-cadastro { 
-
   align-items: center;
   display: flex;
   flex-direction: column;
   justify-content: center;
-
 }
 
-.ajuste {
+.p-cadastro {
   text-align: center;
 }
 
 .logo-cadastro {
-
   align-items: center;
   display: flex;
   flex-direction: column;
-  margin-top: 60px;
-
 }
   
 .cadastro {
-
   align-items: center;
   display: flex;
   flex-direction: column;
   margin-top: 40px;
   margin-bottom: 5%;
-  width: 100%;
-   
+  width: 100%;  
 }
